# lister

./: .gitignore  README.md  list_and_save.py  pyproject.toml  run_pytest.py
.github/workflows/: ci.yml  lister.yml  python-app.yml
src/files_lister/: list_and_save.py
tests/: test_list_and_save.py
