[project]
name = "files_lister"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.11.1" ,
    "ruff>=0.9.2"
]

[tool.pytest.ini_options]
addopts = "--log-cli-level=INFO"
testpaths = ["tests"]
pythonpath = [
    "src"
]