[project]
name = "files_lister"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0" ,
    "ruff>=0.9.2",
    "coverage==7.6.10",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = "--log-cli-level=INFO"
testpaths = ["tests"]
pythonpath = [
    "src"
]

[project.scripts]
list_files = "files_lister.list_and_save:main"

[tool.uv]
package = true